syntax = "proto3";

package orchestrator;

option go_package = "openlora/orchestrator/proto";

// Orchestrator service manages resource allocation and job scheduling.
service Orchestrator {
  // Submit a job for scheduling
  rpc SubmitJob(SubmitJobRequest) returns (SubmitJobResponse);
  
  // Get job status
  rpc GetJob(GetJobRequest) returns (GetJobResponse);
  
  // Cancel a job
  rpc CancelJob(CancelJobRequest) returns (CancelJobResponse);
  
  // Get cluster status
  rpc GetClusterStatus(ClusterStatusRequest) returns (ClusterStatusResponse);
  
  // Stream job events
  rpc WatchJobs(WatchJobsRequest) returns (stream JobEvent);
}

message ResourceRequirements {
  int32 gpus = 1;
  string gpu_type = 2;
  int32 memory_gb = 3;
  int32 cpus = 4;
}

message SubmitJobRequest {
  string name = 1;
  string user_id = 2;
  string type = 3;
  int32 priority = 4;
  ResourceRequirements resources = 5;
  map<string, string> config = 6;
}

message SubmitJobResponse {
  string job_id = 1;
}

message GetJobRequest {
  string job_id = 1;
}

message GetJobResponse {
  string job_id = 1;
  string name = 2;
  string user_id = 3;
  string state = 4;
  int32 priority = 5;
  string error = 6;
}

message CancelJobRequest {
  string job_id = 1;
}

message CancelJobResponse {
  bool success = 1;
}

message ClusterStatusRequest {}

message ClusterStatusResponse {
  int32 total_nodes = 1;
  int32 healthy_nodes = 2;
  int32 total_gpus = 3;
  int32 used_gpus = 4;
  float gpu_utilization = 5;
  int32 pending_jobs = 6;
  int32 running_jobs = 7;
}

message WatchJobsRequest {
  string user_id = 1;
}

message JobEvent {
  string job_id = 1;
  string event_type = 2;
  string state = 3;
  string message = 4;
  int64 timestamp = 5;
}
